# zinc

./: .gdbinit  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Gemfile  Makefile  Makefile.in  README.md  Rakefile  _config.yml  architectures.yml  blog.html  boards.yml  build.rs  cargo_config.in  configure  configure.ac  index.md  ioreg_test.rs  platforms.yml  stats.html  target.json.in  thumbv6-none-eabi.json  thumbv6m-none-eabi.json  thumbv7em-none-eabi.json  thumbv7m-none-eabi.json
.cargo/: config
_data/: travis.json
_layouts/: bootstrap.html
_plugins/: githist.rb  travis.rb
_posts/: 2014-06-24-welcome-to-jekyll.markdown  2014-06-27-on-platform-trees.md  2014-07-14-zinc-goals.md
apps/: app_blink.rs  app_blink_k20.rs  app_blink_k20_isr.rs  app_blink_stm.rs  app_blink_stm32f4.rs  app_blink_stm32l1.rs  app_blink_tiva_c.rs  app_bluenrg_stm32l1.rs  app_dht22.rs  app_empty.rs  app_lcd_tiva_c.rs  app_mbed_lcd.rs  app_mrf_send.rs  app_sched.rs  app_systick.rs  app_uart.rs  app_uart_tiva_c.rs  app_usart_stm32l1.rs  hello_blink.rs  hello_lcd.rs  img.rs  k20dx.rs  old_app_mbed_lcd.rs  old_app_sched.rs  old_app_systick.rs
apps/k20/: Cargo.toml  layout.ld
apps/k20/src/: empty.rs  mk20_dx256_vlh7.rs
ci/: build-examples.sh
contrib/: README.md  cortexm4.json
contrib/k20/: layout.ld
css/: bootstrap.css  more.css
examples/: app_blink.rs  app_blink_k20.rs  app_blink_k20_isr.rs  app_blink_pt.rs  app_blink_stm32f4.rs  app_blink_stm32l1.rs  app_blink_tiva_c.rs  app_bluenrg_stm32l1.rs  app_dht22.rs  app_empty.rs  app_lcd_tiva_c.rs  app_nothing.rs  app_rgb_pwm_lpc17xx.rs  app_uart.rs  app_uart_tiva_c.rs  app_usart_stm32l1.rs  blink_tiva_c.rs  dht22.rs  lcd_tiva_c.rs  old_app_systick.rs
examples/adc_lpc17xx/: Cargo.toml
examples/adc_lpc17xx/src/: main.rs
examples/blink_k20/: Cargo.toml
examples/blink_k20/src/: main.rs
examples/blink_k20_isr/: Cargo.toml
examples/blink_k20_isr/src/: main.rs
examples/blink_lpc17xx/: Cargo.toml
examples/blink_lpc17xx/src/: main.rs
examples/blink_pt/: Cargo.toml
examples/blink_pt/src/: main.rs
examples/blink_stm32f1/: Cargo.toml
examples/blink_stm32f1/src/: main.rs
examples/blink_stm32f4/: Cargo.toml
examples/blink_stm32f4/src/: main.rs
examples/blink_stm32f7/: Cargo.toml  thumbv7em-none-eabi.json
examples/blink_stm32f7/.cargo/: config
examples/blink_stm32f7/src/: main.rs
examples/blink_stm32l1/: Cargo.toml
examples/blink_stm32l1/src/: main.rs
examples/blink_tiva_c/: Cargo.toml
examples/blink_tiva_c/src/: main.rs
examples/bluenrg_stm32l1/: Cargo.toml
examples/bluenrg_stm32l1/src/: main.rs
examples/dht22/: Cargo.toml
examples/dht22/src/: main.rs
examples/empty/: Cargo.toml  thumbv6m-none-eabi.json
examples/empty/src/: main.rs
examples/lcd_tiva_c/: Cargo.toml
examples/lcd_tiva_c/src/: main.rs
examples/rgb_pwm_lpc17xx/: Cargo.toml  thumbv7m-none-eabi.json
examples/rgb_pwm_lpc17xx/src/: main.rs
examples/spi_stm32f4/: Cargo.toml
examples/spi_stm32f4/src/: main.rs
examples/uart/: Cargo.toml
examples/uart/src/: main.rs
examples/uart_tiva_c/: Cargo.toml
examples/uart_tiva_c/.cargo/: config
examples/uart_tiva_c/src/: main.rs
examples/usart_stm32f1/: Cargo.toml
examples/usart_stm32f1/src/: main.rs
examples/usart_stm32l1/: Cargo.toml
examples/usart_stm32l1/src/: main.rs
ioreg/: Cargo.toml  builder.rs  ioreg.rs  memory_map.rs  node.rs  parser.rs  test.rs
ioreg/builder/: accessors.rs  getter.rs  mod.rs  register.rs  setter.rs  union.rs  utils.rs
ioreg/src/: lib.rs  node.rs  parser.rs
ioreg/src/builder/: accessors.rs  getter.rs  mod.rs  register.rs  setter.rs  union.rs  utils.rs
ioreg/tests/: test.rs
macro/: ioreg.rs  platformtree.rs  platformtree_test.rs  platformtree_testgen.rb
macro_platformtree/: Cargo.toml  platformtree.rs
macro_platformtree/src/: lib.rs
macro_zinc/: Cargo.toml
macro_zinc/src/: lib.rs
platformtree/: Cargo.toml  builder.rs  builder_test.rs  context.rs  failing_tests.rb  macro.rs  node.rs  parser.rs  parser_test.rs  platformtree.rs  pt.rs  test.rs  test_helpers.rs
platformtree/builder/: mcu.rs  meta_args.rs  mod.rs  os.rs
platformtree/src/: lib.rs  node.rs  parser.rs  test_helpers.rs
platformtree/src/builder/: mcu.rs  meta_args.rs  mod.rs  os.rs
src/: lib.rs  main.rs  zinc.rs
src/boards/: mbed_lpc1768.rs  mod.rs  stm32f4discovery.rs
src/drivers/: bluenrg.rs  chario.rs  dht22.rs  dht22_pt.rs  drivers_pt.rs  mod.rs  mrf24j40.rs
src/drivers/lcd/: c12332.rs  font_small_7.rs  hd44780u.rs  ili9341.rs  mod.rs
src/hal/: gpio.rs  init.rs  isr.rs  layout.ld.in  layout_common.ld  mem_init.rs  mod.rs  pin.rs  pwm.rs  spi.rs  stack.rs  timer.rs  uart.rs
src/hal/board/: k20.rs  mod.rs  teensy31.rs
src/hal/cortex_common/: irq.rs  mod.rs  mpu.rs  nvic.rs  scb.rs  systick.rs
src/hal/cortex_m0/: isr.rs  mod.rs
src/hal/cortex_m0plus/: default_handlers.S  isr.rs  mod.rs  systick.rs
src/hal/cortex_m3/: armmem.ld  default_handlers.S  default_handlers.s  isr.rs  lock.rs  mod.rs  mpu.rs  nvic.rs  scb.rs  sched.S  sched.rs  systick.rs
src/hal/cortex_m4/: mod.rs
src/hal/cortex_m7/: mod.rs
src/hal/freescale/: iomem.ld  mod.rs
src/hal/k20/: iomem.ld  isr.rs  layout.ld  mod.rs  (+6 more)
src/interfaces/: chario.rs  lcd.rs  mod.rs
src/ioreg/: Cargo.toml  ioreg.rs  node.rs  parser.rs  test.rs
src/lib/: app.rs  ioreg.rs  lang_items.rs  macros.rs  mod.rs  queue.rs  strconv.rs  support.rs  volatile_cell.rs
src/macro/: ioreg.rs  platformtree.rs
src/os/: cond_var.rs  debug.rs  mod.rs  mutex.rs  syscall.rs  task.rs
src/platformtree/: node.rs  parser.rs  parser_test.rs  platformtree.rs  test_helpers.rs
src/util/: app.rs  ioreg.rs  lang_items.rs  mod.rs  shared.rs  support.rs  volatile_cell.rs  wait_for.rs
src/zinc/: lib.rs
support/: build-jenkins.sh  fixcov.py  img_to_arr.rb  install-rustup.sh  pingen.rb  rake.rb  record_stats.sh  rust.patch  stats-ssh-keys  stats-ssh-keys.pub
support/svd/: Gemfile  svd.rb  template.rs.erb
support/target-specs/: thumbv7em-none-eabi.json  thumbv7m-none-eabi.json
volatile_cell/: Cargo.toml  lib.rs
(+215 files in other folders)
