[package]
name = "zinc"
version = "0.1.0"
authors = ["Zinc Developers <zinc@github.com>"]
build = "build.rs"

[lib]
name = "zinc"
crate-type = ["lib"]

[features]
cpu_cortex-m3 = []
cpu_cortex-m4 = []

mcu_lpc17xx = ["cpu_cortex-m3"]
mcu_stm32f4 = ["cpu_cortex-m4"]
mcu_stm32l1 = ["cpu_cortex-m3"]
mcu_k20 = ["cpu_cortex-m4"]
mcu_tiva_c = ["cpu_cortex-m4"]
multitasking = ["cpu_cortex-m4"]

[target.thumbv6-none-eabi.dependencies.core]
git = "https://github.com/hackndev/rust-libcore"

[target.thumbv7m-none-eabi.dependencies.core]
git = "https://github.com/hackndev/rust-libcore"

[target.thumbv7em-none-eabi.dependencies.core]
git = "https://github.com/hackndev/rust-libcore"

[dependencies.ioreg]
path = "./ioreg"

[dependencies.volatile_cell]
path = "./volatile_cell"

[dependencies.rlibc]
git = "https://github.com/mcoffin/rlibc"
branch = "zinc"

[dev-dependencies.platformtree]
path = "./platformtree"

[dev-dependencies.macro_platformtree]
path = "./macro_platformtree"

[dev-dependencies.macro_zinc]
path = "./macro_zinc"

[[example]]
name = "nothing"
path = "examples/nothing.rs"

[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "blink_k20"
path = "examples/blink_k20.rs"

[[example]]
name = "blink_k20_isr"
path = "examples/blink_k20_isr.rs"

[[example]]
name = "blink_pt"
path = "examples/blink_pt.rs"

[[example]]
name = "blink_stm32f4"
path = "examples/blink_stm32f4.rs"

[[example]]
name = "blink_stm32l1"
path = "examples/blink_stm32l1.rs"

[[example]]
name = "blink_tiva_c"
path = "examples/blink_tiva_c.rs"

[[example]]
name = "bluenrg_stm32l1"
path = "examples/bluenrg_stm32l1.rs"

[[example]]
name = "dht22"
path = "examples/dht22.rs"

[[example]]
name = "empty"
path = "examples/empty.rs"

[[example]]
name = "lcd_tiva_c"
path = "examples/lcd_tiva_c.rs"

[[example]]
name = "uart"
path = "examples/uart.rs"

[[example]]
name = "uart_tiva_c"
path = "examples/uart_tiva_c.rs"

[[example]]
name = "usart_stm32l1"
path = "examples/usart_stm32l1.rs"
