[package]

name = "volatile_cell"
version = "1.0.0"
authors = ["Vladimir Pouzanov <farcaller@gmail.com>"]

[lib]
name = "volatile_cell"
path = "lib.rs"
test = false
doctest = false
doc = true
crate-type = ["rlib"]

[features]
replayer = ["expectest"]

[target.thumbv6m-none-eabi.dependencies]
rust-libcore = "*"

[target.thumbv7m-none-eabi.dependencies]
rust-libcore = "*"

[target.thumbv7em-none-eabi.dependencies]
rust-libcore = "*"

[dependencies.expectest]
optional = true
